Temprorary disable mac randomization at Cloud Android
Because mac randomization does not supported at mac80211_hwsim driver
of kernel version 5.4, temprorary disable mac randomization at
framework until patch https://lore.kernel.org/all/20200323162358.b397b1a1acef.Ice0536e34e5d96c51f97c374ea8af9551347c7e8@changeid/
is back ported to kernel 5.4 of android.

Bug: 238124637
Test: Running command at host
  adb shell cmd overlay lookup \
  com.android.wifi.resources com.android.wifi.resources:bool/config_wifi_connected_mac_randomization_supported
  adb shell cmd overlay lookup \
  com.android.wifi.resources com.android.wifi.resources:bool/config_wifi_ap_mac_randomization_supported

  Should print false

Change-Id: I416afe21e8bfd31f97fa9704d33585faf3e1957d

--- a/shared/phone/overlays/CuttlefishWifiOverlay/res/values/config.xml
+++ b/shared/phone/overlays/CuttlefishWifiOverlay/res/values/config.xml
@@ -18,14 +18,18 @@
 -->
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <!-- True if the firmware supports connected MAC randomization -->
-    <bool name="config_wifi_connected_mac_randomization_supported">true</bool>
+    <!-- TODO(b/238124637) Re-enable this flag when mac randomization support
+                           is back-ported to kernel-common-android12-5.4  -->
+    <bool name="config_wifi_connected_mac_randomization_supported">false</bool>
 
     <!-- True if the firmware supports p2p MAC randomization -->
     <!-- TODO(b/237945863) Re-enable this flag when mac randomization for
                            P2P is supported at Cloud Android -->
     <bool name="config_wifi_p2p_mac_randomization_supported">false</bool>
 
+    <!-- TODO(b/238124637) Re-enable this flag when mac randomization support
+                           is back-ported to kernel-common-android12-5.4  -->
     <!-- True if the firmware supports ap MAC randomization -->
-    <bool name="config_wifi_ap_mac_randomization_supported">true</bool>
+    <bool name="config_wifi_ap_mac_randomization_supported">false</bool>
 
 </resources>
