Temporary Device List (+checkbox, refresh button). more like a frame
Change-Id: Icecbb7507bd4aeff0c40b3087a15e9ae0d05de60

--- a/host/frontend/operator/webui/src/app/device-pane/device-pane.component.html
+++ b/host/frontend/operator/webui/src/app/device-pane/device-pane.component.html
@@ -1,1 +1,24 @@
-<p style="position:relative; text-align:center;">Devices</p>
+<div
+  class="list-pane-title"
+  style="margin: 10% auto; position: relative; text-align: center"
+>
+  Devices
+  <span id="refresh-list" title="Refresh list" (click)="onRefresh()"
+    >&#8635;</span
+  >
+</div>
+<div>
+  <ul class="devices">
+    <li
+      *ngFor="let device of devices"
+      [class.selected]="device === selectedDevice"
+      (click)="onSelect(device)"
+    >
+      <label>
+        <!--Implemented with checkbox, not radio button as current page-->
+        <input type="checkbox" class="badge" />
+        {{ device.id }}
+      </label>
+    </li>
+  </ul>
+</div>
