Implemented View pane including iframe. (Nothing inside iframe)
Change-Id: I62ad2209d6eda947797792ef7c29f697eb75de91

--- a/host/frontend/operator/webui/src/app/app.component.html
+++ b/host/frontend/operator/webui/src/app/app.component.html
@@ -1,7 +1,6 @@
 <mat-drawer-container class="drawer-container">
-    <mat-drawer class="device-pane" mode="side" opened>
-        <app-device-pane></app-device-pane>
-    </mat-drawer>
-    <mat-drawer-content>View pane</mat-drawer-content>
-
+  <mat-drawer class="device-pane" mode="side" opened>
+    <app-device-pane></app-device-pane>
+  </mat-drawer>
+  <mat-drawer-content><app-view-pane></app-view-pane></mat-drawer-content>
 </mat-drawer-container>
