--- a/host/frontend/operator/webui/src/app/device-pane/device-pane.component.sass
+++ b/host/frontend/operator/webui/src/app/device-pane/device-pane.component.sass
@@ -4,6 +4,8 @@
     padding: 0
 
 .devices li
+    display: flex
+    justify-content: space-between
     font-size: 60%
     cursor: pointer
     position: relative
@@ -43,3 +45,10 @@
     width: 250px
     background: #000000
     color: #eee
+
+.Show-All
+    display: block
+    margin: auto
+
+#pop-up
+    display: inline-block
