Use a template to create display elements in UI
Bug: 232574264
Test: locally
Change-Id: I4956855e384b8f4616f0135f673fe61ee1211057

--- a/host/frontend/webrtc/client/style.css
+++ b/host/frontend/webrtc/client/style.css
@@ -291,6 +291,7 @@ body {
 .device-display {
   /* Prevents #device-displays from using this element when computing flex size. */
   position: absolute;
+  visibility: hidden;
 }
 
 /* Container <div> to show info about the individual display. */
