Changed to use EventEmitter instead of sharing variable, simplified checkbox(HTML) and onSelect() function code
Change-Id: Ia2cf8a489486ff687521490944dd6c17a0990526

--- a/host/frontend/operator/webui/src/app/view-pane/view-pane.component.html
+++ b/host/frontend/operator/webui/src/app/view-pane/view-pane.component.html
@@ -1,6 +1,6 @@
 <div>
-  <div class="view-pane" *ngIf="displaysService.displays.length">
-    <div class="device-viewer" *ngFor="let display of displaysService.displays">
+  <div class="view-pane" *ngIf="visibleDevices.length">
+    <div class="device-viewer" *ngFor="let display of visibleDevices">
       <h3>
         {{ display }}
       </h3>
