Autoformat using prettier
Change-Id: Ia9763c33dcf3e572b92c5c6d85c03a2659bf533b

--- a/host/frontend/operator/webui/src/app/device-pane/device-pane.component.html
+++ b/host/frontend/operator/webui/src/app/device-pane/device-pane.component.html
@@ -10,7 +10,7 @@
 <div>
   <ul class="devices">
     <section class="device-list">
-      <li *ngFor="let device of (devices | async)">
+      <li *ngFor="let device of devices | async">
         <!--Implemented with checkbox, not radio button as current page-->
         <mat-checkbox
           class="checkbox"
