Changed structure for clear partition of functions (+ Encapsulated throwing sanitized url in a function, Able to remove stopped device.)

--- a/host/frontend/operator/webui/src/app/view-pane/view-pane.component.html
+++ b/host/frontend/operator/webui/src/app/view-pane/view-pane.component.html
@@ -6,7 +6,7 @@
       </h3>
       <iframe
         style="margin: 10px 0 0 10px"
-        [src]="deviceConnectURL(display) | safe"
+        [src]="displaysService.deviceConnectURL(display) | safe"
         [title]="display"
       ></iframe>
     </div>
