Add more visual feedback to control panel buttons
- Show the pointer cursor on hover
- Show the not-allowed cursor on hover when disabled
- Change background color on click

Bug: 243195302
Test: locally
Change-Id: I767dd6c394fe07edbfa92ead77c83fe5faac64f3

--- a/host/frontend/webrtc/client/style.css
+++ b/host/frontend/webrtc/client/style.css
@@ -304,20 +304,26 @@ body {
 
   color: var(--button-fg);
   border: none;
+  border-radius: 10px;
   outline: none;
   background-color: var(--button-bg);
 }
-.control-panel-column button:disabled {
-  color: var(--button-disabled-fg);
-}
+
 .control-panel-column button.modal-button-opened {
-  border-radius: 10px;
   background-color: var(--modal-bg);
 }
 
-.control-panel-column button.pressed_down {
+.control-panel-column button:disabled {
+  color: var(--button-disabled-fg);
+  cursor: not-allowed;
+}
+
+.control-panel-column button:enabled {
+  cursor: pointer;
+}
+
+.control-panel-column button:active {
   border: solid 1px var(--button-pressed-border);
-  border-radius: 10px;
   background-color: var(--button-pressed-bg);
 }
 
