Remove the keyboard control
Keyboard events are captured when any of the device's screens have
focus (after first touching them or their labels)
The keyboard control didn't work well with multiple devices in iframes
on the same page. This makes the behavior in those cases more intuitive.

Bug: 243195302
Test: locally
Change-Id: I32ba5154ed9e9b7def475e73a1f25b2307244963

--- a/host/frontend/webrtc/client/style.css
+++ b/host/frontend/webrtc/client/style.css
@@ -336,6 +336,8 @@ body {
   position: relative;
   display: flex;
   flex-direction: row;
+  /* Don't show an outline when using the keyboard */
+  outline: 0px solid transparent;
 }
 
 /*
