UI: Move app controls to the left control panel
The looks of these controls also change to match the style of the
panel.

Bug: b/243195302
Test: locally
Change-Id: I3b982e984ed8b40b44d3cdff252c292427e60770

--- a/host/frontend/webrtc/client/style.css
+++ b/host/frontend/webrtc/client/style.css
@@ -104,23 +104,11 @@ body {
   align-items: center;
 }
 
-#camera-control {
+#camera_off_btn {
   display: none !important;
 }
-#record-video-control {
+#record_video_btn {
   display: none !important;
-}
-
-#app-controls {
-  margin-left: 10px;
-}
-#app-controls > div {
-  display: inline-block;
-  position: relative;
-  margin-right: 6px;
-}
-#device-audio {
-  height: 44px;
 }
 
 #error-message-div {
