--- a/host/frontend/webrtc/client/style.css
+++ b/host/frontend/webrtc/client/style.css
@@ -133,31 +133,15 @@ body {
 #error-message.hidden {
   display: none;
 }
+#error-message.info {
+  background-color: var(--info-bg);
+}
 #error-message.warning {
   background-color: var(--alert-bg);
 }
 #error-message.error {
   background-color: var(--error-bg);
 }
-#status-div {
-  flex-grow: 1;
-}
-#status-message {
-  color: var(--main-fg);
-  font-family: 'Open Sans', sans-serif;
-  padding: 10px;
-  margin: 10px;
-}
-#status-message.connecting {
-  background-color: var(--alert-bg);
-}
-#status-message.error {
-  background-color: var(--error-bg);
-}
-#status-message.connected {
-  background-color: var(--info-bg);
-}
-
 /* Control panel buttons and device screen(s). */
 
 #controls-and-displays {
