--- a/frontend/src/operator/webui/src/app/app.component.sass
+++ b/frontend/src/operator/webui/src/app/app.component.sass
@@ -1,7 +1,6 @@
-*
-    font-family: 'Courier New', Courier, monospace
-
-.drawer-container
+.container
+    display: flex
+    flex-direction: column
     position: absolute
     top: 0
     bottom: 0
@@ -10,9 +9,24 @@
     background: #2a2a2a
     color: #eee
 
+.cloud-android-toolbar
+    background: #073042
+    color: #eee
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.5)
+    text-align: center
+
+.cloud-android-title
+    margin: 0 auto
+
+.drawer-container
+    flex: 1
+    background: #CFCFCF
+
 .device-pane
     margin: 0 auto
     font-size: 200%
     width: 250px
-    background: #000000
-    color: #eee
+    background: rgba(245, 245, 245, 0.8)
+    color: #073042
+    filter: drop-shadow(4px 4px 10px rgba(0, 0, 0, 0.25))
+    border-radius: 0px 16px 16px 0px
