--- a/frontend/src/operator/webui/src/app/device-pane/device-pane.component.html
+++ b/frontend/src/operator/webui/src/app/device-pane/device-pane.component.html
@@ -11,21 +11,23 @@
   <ul class="devices">
     <section class="device-list">
       <li *ngFor="let device of devices | async">
-        <mat-checkbox
-          class="checkbox"
+        <mat-slide-toggle
           [ngModel]="displaysService.isVisibleDevice(device)"
           (change)="onSelect(device)"
-          >{{ device.deviceId }}</mat-checkbox
+          >{{ device.deviceId }}</mat-slide-toggle
         >
-        <a
+        <!-- <a
           [href]="device.deviceUrl | safe"
           title="Launch in new tab"
           target="_blank"
-        >
-          <button mat-icon-button id="pop-up">
+        > -->
+          <!-- <button mat-icon-button id="pop-up">
             <mat-icon>open_in_new</mat-icon>
           </button>
-        </a>
+        </a> -->
+        <button mat-icon-button class="menu" title="menu">
+          <mat-icon>more_vert</mat-icon>
+        </button>
       </li>
     </section>
   </ul>
