refactoring: move device url logic to safe-device-url pipe
and then, will switch the pipe impl depending on build env.

--- a/frontend/src/operator/webui/src/app/device-pane/device-pane.component.html
+++ b/frontend/src/operator/webui/src/app/device-pane/device-pane.component.html
@@ -18,7 +18,7 @@
           >{{ device.deviceId }}</mat-checkbox
         >
         <a
-          [href]="device.deviceUrl | safe"
+          [href]="device.deviceId | safedeviceurl"
           title="Launch in new tab"
           target="_blank"
         >
