--- a/frontend/src/operator/webui/src/app/view-pane/view-pane.component.html
+++ b/frontend/src/operator/webui/src/app/view-pane/view-pane.component.html
@@ -6,7 +6,7 @@
       </h3>
       <iframe
         style="margin: 10px 0 0 10px"
-        [src]="display.deviceUrl | safe"
+        [src]="display.deviceId | safedeviceurl"
         [title]="display.deviceId"
       ></iframe>
     </div>
