Make the cluster display private.
Bug: 237787920
Test: atest android.car.cts.CarOccupantZoneManagerTest
Change-Id: Icec219d356887e43aaca15e4dbdbc9b47d9d3d43

--- a/shared/auto/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/shared/auto/overlay/frameworks/base/core/res/res/values/config.xml
@@ -37,4 +37,11 @@
 
     <!-- Show the "Adaptive Brightness" toggle. -->
     <bool name="config_automatic_brightness_available">true</bool>
+
+    <!-- Controls if local secondary displays should be private or not. Value specified in the array
+         represents physical port address of each display and display in this list will be marked
+         as private. {@see android.view.Display#FLAG_PRIVATE} -->
+    <integer-array translatable="false" name="config_localPrivateDisplayPorts">
+        <item>1</item> <!-- ClusterDisplay -->
+    </integer-array>
 </resources>
